Added open integrity footer

--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -30,6 +30,8 @@
 
 <nav class="nav">
     <?js= this.nav ?>
+    <hr/>
+    <div class="footer"><a href="https://openintegrity.org">Open Integrity</a> by <a href="https://iilab.org">iilab</a></div>
 </nav>
 
 <div id="main">
