--- a/static/styles/jsdoc-default.css
+++ b/static/styles/jsdoc-default.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
 * {
   box-sizing: border-box
@@ -587,6 +587,19 @@ section article hr {
   margin-left: -30px;
   margin-right: -30px;
   color: #eee;
+}
+
+hr {
+  margin-right: 30px;
+  border-top: 1px solid #ddd;
+}
+
+nav .footer {
+  font-family: 'Montserrat', sans-serif;
+  line-height: 18px;
+  padding: 0;
+  display: block;
+  font-size: 12px;
 }
 
 h1.page-title {
